completed tasks b4 deploy

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-spring.servlet.multipart.enabled=true
-spring.data.mongodb.database=restaurants
 
-spring.servlet.multipart.enabled=true
+spring.data.mongodb.uri=mongodb://mongo:IBIDkdAZlmQetlsYiGIOcgUREvaNCWdB@turntable.proxy.rlwy.net:12446/restaurants?authSource=admin
